# scratchBlockchain

./: .dockerignore  .env.example  .gitignore  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER_COMPOSE_ANALYSIS.md  Dockerfile  FEATURES.md  GITHUB_PUSH_GUIDE.md  PRODUCTION_READINESS.md  README.md  ROADMAP.md  STATUS.md  TEST_REPORT.md  WHATS_LEFT.md  WHAT_IT_DOES.md  devnet-genesis.json  docker-compose.yml  genesis.json  rustfmt.toml  test-results.txt
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: consensus_bench.rs  mempool_bench.rs  storage_bench.rs  throughput.rs
common/: Cargo.toml
common/src/: consensus_types.rs  crypto.rs  lib.rs  merkle.rs  traits.rs  types.rs  validation.rs
config/: testnet.toml
consensus/: Cargo.toml
consensus/fuzz/: Cargo.toml
consensus/fuzz/fuzz_targets/: bft_rounds.rs  finality_votes.rs
consensus/src/: bft.rs  lib.rs
da/: Cargo.toml
da/src/: lib.rs
data/state_db/: db  snap.00000000000000E7
deployment/cloud/: README.md
deployment/local/: README.md  docker-compose.yml  faucet.html  setup.sh  validate.sh
deployment/local/configs/: alerts.yml  genesis.json  genesis.toml  nginx.conf  prometheus.yml  rpc1.toml  validator1.toml  validator1_key.json  validator2_key.json  validator3.toml  validator3_key.json
docs/: index.html  style.css
examples/: full_demo.rs
execution/: Cargo.toml
execution/src/: account_abstraction.rs  evm.rs  gas.rs  lib.rs
explorer/: app.js  index.html  style.css
faucet/: Cargo.toml  index.html
frontend/governance/: index.html  package.json  tailwind.config.js  vite.config.js
governance/: Cargo.toml
governance/src/: lib.rs
governance/tests/: economic_tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: chaos_test.rs  consensus_integration.rs  integration_test.rs  load_test.rs  mempool_integration.rs  multi_node_consensus.rs  network_integration.rs  storage_integration.rs  sync_test.rs
interop/: Cargo.toml  README.md  hardhat.config.js  package.json
interop/contracts/: Bridge.sol
interop/contracts/interfaces/: IBridge.sol
interop/contracts/libraries/: MessageLib.sol
interop/fuzz/: Cargo.toml
interop/fuzz/fuzz_targets/: bridge_message.rs  token_operations.rs
interop/scripts/: deploy.js
interop/src/: ethereum_bridge.rs  lib.rs  relayer.rs  token_registry.rs
mempool/: Cargo.toml
mempool/src/: lib.rs  mev_protection.rs
mev/: Cargo.toml
mev/src/: lib.rs
monitoring/: Cargo.toml  README.md  docker-compose.yml
monitoring/grafana/dashboards/: blockchain.json  dashboard-provider.yml  network-overview.json
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/src/: lib.rs  metrics.rs
network/: Cargo.toml
network/src/: behaviour.rs  lib.rs  peer_store.rs  protocol.rs  rate_limiter.rs  reputation.rs  transport.rs
node/: Cargo.toml
node/src/: block_producer.rs  circuit_breaker.rs  config.rs  faucet.rs  fork_choice.rs  lib.rs  light_client.rs  main.rs  metrics.rs  rpc.rs  rpc_economic.rs  runtime_upgrade.rs  security_tests.rs  test_utils.rs
rollup/: Cargo.toml
rollup/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
runtime/src/upgrade/: coordinator.rs  migration.rs  mod.rs  snapshot.rs  validator.rs  version.rs
scripts/: backup.sh  deploy-complete.sh  deploy.sh  deploy_testnet.sh  start-testnet.sh  stop-testnet.sh
sdk/javascript/: README.md  index.js  package.json
sdk/javascript/examples/: basic-usage.ts  wallet-example.ts
sdk/javascript/src/: client.ts  index.ts  wallet.ts
sdk/javascript/src/providers/: http.ts
sdk/javascript/src/types/: client.ts  provider.ts
storage/: Cargo.toml
storage/src/: db.rs  lib.rs  receipt_store.rs  trie.rs
testnet/: README.md
testnet/configs/: testnet-genesis.toml
testnet/docs/: DEVELOPER_GUIDE.md  VALIDATOR_GUIDE.md
testnet/node1/: config.toml
testnet/node1/keys/: validator_key.json
testnet/node2/: config.toml
testnet/node2/keys/: validator_key.json
testnet/node3/: config.toml
testnet/node3/keys/: validator_key.json
testnet/scripts/: setup-validator.sh
tests/: comprehensive-test.sh
tests/localhost/: QUICKSTART.md  README.md  package.json  run-all-tests.sh
tests/localhost/scripts/: 01-send-transaction.js  02-state-queries.js  30-sdk-connect.js  31-sdk-wallet.js  check-blocks.sh  check-metrics.sh  generate_valid_tx.js
tools/genesis-builder/: Cargo.toml
tools/genesis-builder/examples/: devnet.toml  mainnet.toml  testnet.toml
tools/genesis-builder/src/: builder.rs  config.rs  main.rs  validation.rs
wallet/: app.js  index.html  style.css
zk/: Cargo.toml
zk/src/: lib.rs
