[workspace]
members = [
    "common",
    "network",
    "consensus",
    "storage",
    "node",
    "execution",
    "zk",
    "rollup",
    "interop",
    "governance",
    "integration-tests",
    "da",
    "mempool",
    "mev", "benchmarks",
    "interop/fuzz",
    "consensus/fuzz",
    "tools/genesis-builder",
    "runtime",
]
resolver = "2"
