[workspace]
members = [
    "common",
    "network",
    "consensus",
    "storage",
    "node",
    "execution",
    "zk",
    "interop",
    "governance",
    "da",
    "mempool",
    "mev",
    "interop/fuzz",
    "consensus/fuzz",
    "tools/genesis-builder",
    "runtime",
    "monitoring",
]
resolver = "2"
