[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
wasmtime = "14.0"
revm = { version = "3.5", default-features = false, features = ["std", "secp256k1"] }
rayon = "1.7"
ed25519-dalek = "2.0"
bytes = "1.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
