[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "2.0"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
common = { path = "../common" }
