[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libp2p = { version = "0.52", features = ["gossipsub", "kad", "noise", "tcp", "yamux", "dns", "macros", "tokio", "request-response", "cbor", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
void = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
