[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
network = { path = "../network" }
consensus = { path = "../consensus" }
storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
