[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
network = { path = "../network" }
consensus = { path = "../consensus" }
storage = { path = "../storage" }
execution = { path = "../execution" }
mempool = { path = "../mempool" }
governance = { path = "../governance" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
reqwest = "0.11"
governor = "0.6"
nonzero_ext = "0.3"
libp2p = "0.52"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
