[package]
name = "interop-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
interop = { path = ".." }
common = { path = "../../common" }
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.4"

[[bin]]
name = "bridge_message_fuzz"
path = "fuzz_targets/bridge_message.rs"

[[bin]]
name = "token_operations_fuzz"
path = "fuzz_targets/token_operations.rs"
