[package]
name = "genesis-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genesis-builder"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
governance = { path = "../../governance" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
